ADR doc is a work in progress